add cucumber test